Added basic server-side translation framework
tweaks `Messenger.c` logic:
- removed default white color
- added separated descriptor for text component support
- allowed " " as prefix in descriptor
finished translation in carpet rule setting stuffs
- migrated all string based translation to text component based translation in SettingsManager
- name, description and extra infos in Rule annotation will be automatically register into default language (en_us) translation for compatibility
- fixed brackets display issue when a rule have 0 option